# hfi_spectre_webserver

./: Cargo.toml  autocanon_analysis.py  build.rs  request_spectre_test.js  request_spectre_test.xml  spectre_testfib.sh  wrk_analysis.py
c_src/: noloopcopy.c
modules/: .gitignore  Makefile  bindings.json  server_hostcalls.h
modules/echo_server/: Makefile  main.cpp
modules/fib_c/: Makefile  fib.cpp
modules/html_template/: Makefile  main.cpp
modules/html_template/Jinja2CppLight/src/: Jinja2CppLight.cpp  Jinja2CppLight.h
modules/jpeg_resize_c/: Makefile  jpeg_resize_c.c  test_bytes.h
modules/msghash_check_c/: .gitignore  Makefile  configure  libsodium.tar.xz  msghash_check.cpp
modules/tflite/: .gitignore  ImageNetLabels.h  Makefile  efficientnet_lite3_fp32_1.h  fake_pthread.c  main.cpp  model_suffix.c  test_bytes.h
modules/tflite/tensorflow/tensorflow/lite/micro/tools/make/: Makefile
modules/xml_to_json/: Makefile  main.cpp  native_app
modules/xml_to_json/xml2json/include/rapidxml/: rapidxml.hpp  rapidxml_utils.hpp
src/: main.rs  service_directory.rs  wasm_module.rs
wrk_scripts/: echo_server.lua  html_template.lua  jpeg_resize_c.lua  msghash_check_c.lua  runall.sh  runall_echo.sh  runall_tflite.sh  tflite.lua  xml_to_json.lua
