[package]
name = "spectresfi_webserver"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
lucet-runtime-internals = { path = "../lucet-spectre/lucet-runtime/lucet-runtime-internals" }
lucet-runtime = { path = "../lucet-spectre/lucet-runtime" }
lucet-wasi = { path = "../lucet-spectre/lucet-wasi" }
lucet-wiggle = { path = "../lucet-spectre/lucet-wiggle" }
cranelift-spectre = { path = "../lucet-spectre/wasmtime/cranelift-spectre" }
anyhow = "1.0.31"
lazy_static = "1.4.0"
libc = "0.2.70"
percent-encoding = "2.1.0"
clap = "2.33.1"

[build-dependencies]
cc = "1.0"